--- a/NCloud/NCloud/Views/Drive/FileSettings.cshtml
+++ b/NCloud/NCloud/Views/Drive/FileSettings.cshtml
@@ -64,7 +64,7 @@
                                 Size
                             </td>
                             <td>
-                                @FileSizeManager.ConvertToReadableSize(Model.Info.Length)
+                                @CloudSizeManager.ConvertToReadableSize(Model.Info.Length)
                             </td>
                         </tr>
                         </table>
