--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -28,7 +28,7 @@
 </div>
 
 <div class="modal hide fade" id="codingModal" aria-labelledby="codingModal" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header background-color">
                 <h5 class="modal-title" id="codingModal">Create New Coding File</h5>
