--- a/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
@@ -102,7 +102,7 @@
                                                 Size
                                             </td>
                                             <td>
-                                                @FileSizeManager.ConvertToReadableSize(item.Info.Length)
+                                                @CloudSizeManager.ConvertToReadableSize(item.Info.Length)
                                             </td>
                                         </tr>
                                     </table>
