--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -190,7 +190,7 @@
                                             Size
                                         </td>
                                         <td>
-                                            @FileSizeManager.ConvertToReadableSize(item.Info.Length)
+                                            @CloudSizeManager.ConvertToReadableSize(item.Info.Length)
                                         </td>
                                     </tr>
                                     <tr>
