--- a/NCloud/NCloud/Views/Web/DownloadPage.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadPage.cshtml
@@ -14,7 +14,7 @@
     <div class="w-100 justify-content-center text-center">
         <form asp-action="DownloadSingleItem">
             <input type="hidden" asp-for="FileName" />
-            <input type="hidden" asp-for="Path" />
+            <input type="hidden" asp-for="FilePath" />
             <button type="submit" class="btn btn-primary border border-primary border-3"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download id="downloadRef" /></button>
         </form>
     </div>
