rename fixed for folders

--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -31,7 +31,7 @@
                         </li>
                         <li class="nav-item my-2">
                             <a asp-controller="Drive" asp-action="Details" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/files.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">My Files</span>
+                                <span class="d-inline m-1"><img src="~/utilities/files.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Cloud Files</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
