--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -89,15 +89,32 @@
 
                                     <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
                                         <td class="w-25 text-break">
-                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center" /></button>
                                         </td>
                                         <td class="text-break">
-                                            <a href="@url" class="text-decoration-none" target="_blank">@url</a>
+                                            <a id="@(counter)_link" href="@(item.IsConnectedToWeb ? url : "")" class="text-decoration-none" target="_blank">@(item.IsConnectedToWeb ? url : "")</a>
                                         </td>
                                     </tr>
                                     <tr class="@(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr2">
                                         <td colspan="2" class="text-center">
-                                            <img src="@CloudQRManager.GenerateQRCodeString(url)" height="100" width="100" class="rounded" />
+
+                                            @{
+                                                var qrData = Constants.GetWebControllerAndActionQRCodeGeneration();
+                                            }
+
+                                            <button type="button" id="@(counter)_qrBtn" class="btn btn-primary" onclick="getQRCodeForItem('@Url.Action(qrData.Second,qrData.First)','@counter')">
+                                                <span id="@(counter)_qrCreateText">Create QR Code</span>
+                                                <img src="/utilities/qr-code.svg" width=" 20" height="20" class="ms-2 item rounded align-center" />
+                                                <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_qrSpinner">
+                                                    <span class="visually-hidden">Loading...</span>
+                                                </div>
+                                            </button>
+                                            <div class="hidden" id="@(counter)_qrDiv">
+                                                <img src=""  id="@(counter)_img" class="" height="100" width="100" />
+                                                <div class="w-100 d-flex justify-content-center">
+                                                    <button type="button" class="btn-close mt-2" onclick="removeQRCodeFromItem('@counter')"></button>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 </table>
@@ -229,7 +246,7 @@
 
                                     <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
                                         <td class="w-25 text-break">
-                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center" /></button>
                                         </td>
                                         <td class="text-break">
                                             <a href="@url" class="text-decoration-none" target="_blank">@url</a>
@@ -237,7 +254,24 @@
                                     </tr>
                                     <tr class="@(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr2">
                                         <td colspan="2" class="text-center">
-                                            <img src="@CloudQRManager.GenerateQRCodeString(url)" height="100" width="100" class="rounded" />
+
+                                            @{
+                                                var qrData = Constants.GetWebControllerAndActionQRCodeGeneration();
+                                            }
+
+                                            <button type="button" id="@(counter)_qrBtn" class="btn btn-primary" onclick="getQRCodeForItem('@Url.Action(qrData.Second,qrData.First)','@counter')">
+                                                <span id="@(counter)_qrCreateText">Create QR Code</span>
+                                                <img src="/utilities/qr-code.svg" width=" 20" height="20" class="ms-2 item rounded align-center" />
+                                                <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_qrSpinner">
+                                                    <span class="visually-hidden">Loading...</span>
+                                                </div>
+                                            </button>
+                                            <div class="hidden" id="@(counter)_qrDiv">
+                                                <img src=""  id="@(counter)_img" class="" height="100" width="100" />
+                                                <div class="w-100 d-flex justify-content-center">
+                                                    <button type="button" class="btn-close mt-2" onclick="removeQRCodeFromItem('@counter')"></button>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 </table>
