--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -52,7 +52,7 @@
 </div>
 
 <div class="modal hide fade" id="textDocumentModal" aria-labelledby="textDocumentModal" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header background-color">
                 <h5 class="modal-title" id="textDocumentModal">Create New Text Document</h5>
