--- a/NCloud/NCloud/Views/Account/Index.cshtml
+++ b/NCloud/NCloud/Views/Account/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model AccountViewModel
 
+@{
+    ViewData["Title"] = "Account";
+}
+
 <div class="d-flex justify-content-between rounded bg-secondary backbuttondiv">
     <a class="btn btn-primary" asp-controller="Account" asp-action="Back" asp-route-returnUrl="@ViewBag.ReturnUrl"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
     <a class="btn btn-danger" asp-controller="Account" asp-action="Logout"><img src="~/utilities/power.svg" width=" 20" height="20" class="rounded align-middle" /></a>
@@ -8,39 +12,37 @@
 <div class="page-content page-container verticalcenter" id="page-content">
     <div class="padding">
         <div class="row container d-flex justify-content-center">
-            <div class="col-xl-6 col-md-12">
+            <div class="col">
                 <div class="card user-card-full">
-                    <div class="row m-l-0 m-r-0">
+                    <div class="row m-l-0 m-r-0  background-color border border-primary border-4 rounded rounded-3">
                         <div class="col-sm-4 background-color user-profile">
                             <div class="card-block text-center text-white">
                                 <div class="m-b-25">
                                     <img src="/utilities/person-circle.svg" class="img-radius" alt="User-Profile-Image" width="100" height="100">
                                 </div>
-                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2">@Model.FullName</h6>
+                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2 text-wrap">@Model.FullName</h6>
                             </div>
                         </div>
-                        <div class="col-sm-8 bg-dark text-white">
+                        <div class="col-sm-8 bg-light text-dark">
                             <div class="card-block">
                                 <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <p class="m-b-10 f-w-600">Username</p>
-                                        <h6 class="text-muted f-w-400">@Model.UserName</h6>
+                                        <h6 class="text-muted f-w-400 text-wrap">@Model.UserName</h6>
                                     </div>
                                     <div class="col-sm-6">
                                         <p class="m-b-10 f-w-600">Email</p>
-                                        <h6 class="text-muted f-w-400">@Model.Email</h6>
+                                        <h6 class="text-muted f-w-400 text-wrap">@Model.Email</h6>
                                     </div>
                                 </div>
-                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Drive Data</h6>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Files</p>
-                                        <h6 class="text-muted f-w-400">0</h6>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Folders</p>
-                                        <h6 class="text-muted f-w-400">0</h6>
+                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600"></h6>
+                                <div class="row align-items-center justify-content-center h-100">
+                                    <div class="col-6 w-100 text-center">
+                                        <a asp-action="DeleteAccount" asp-controller="Account" class="btn btn-danger">
+                                            <span class="fw-bold align-middle mx-2">Delete Account</span>
+                                            <img src="/utilities/trash.svg" width="20" height="20" class="rounded align-middle">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
