--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -81,7 +81,61 @@
     </div>
 </div>
 
+<div class="modal fade" id="fileDeleteModal" tabindex="-1" aria-labelledby="fileDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger text-dark">
+                <h5 class="modal-title" id="fileDeleteModalLabel">Delete file</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this file?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="" class="btn btn-outline-danger" id="deleteFileBtn">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="dirDeleteModal" tabindex="-1" aria-labelledby="dirDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger text-dark">
+                <h5 class="modal-title" id="dirDeleteModalLabel">Delete directory</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this directory?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="" class="btn btn-outline-danger" id="deleteFolderBtn">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
+    <script type="text/javascript">
+        function DeleteFileModal(fileName) {
+            var modal = new bootstrap.Modal(document.getElementById('fileDeleteModal'));
+            
+            document.getElementById("deleteFileBtn").href = `/Drive/DeleteFile?fileName=${fileName}`;
+
+            modal.show();
+        }
+
+        function DeleteDirModal(folderName) {
+            var modal = new bootstrap.Modal(document.getElementById('dirDeleteModal'));
+            
+            document.getElementById("deleteFolderBtn").href = `/Drive/DeleteFolder?folderName=${folderName}`;
+
+            modal.show();
+        }
+    </script>
+
     <script type="text/javascript">
 
 
