--- a/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
+++ b/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
@@ -64,8 +64,38 @@
             <div class="d-flex w-100 justify-content-center input-group mt-4">
                 <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
                 <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFolderToCloudClipboard")','@Model.Info.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle" /></button>
-                <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                <button type="button" class="btn btn-danger border border-danger border-3" id="modalLaunchBtn"><img src="~/utilities/trash.svg" width="20" height="20" class="rounded align-middle" /></button>
             </div>
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="dirDeleteModal" tabindex="-1" aria-labelledby="dirDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger text-dark">
+                <h5 class="modal-title" id="dirDeleteModalLabel">Delete directory</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this directory?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                <a asp-controller="Drive" class="btn btn-outline-danger" asp-action="DeleteFolder" asp-route-folderName="@Model.OldName">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script type="text/javascript">
+        document.getElementById("modalLaunchBtn").addEventListener("click", LaunchModal, false);
+
+        function LaunchModal() {
+            var modal = new bootstrap.Modal(document.getElementById('dirDeleteModal'));
+
+            modal.show();
+        }
+    </script>
+}
