--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -50,14 +50,14 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="dropdown mb-3 p-2 d-flex justify-content-center w-100 border border-3 rounded border-dark">
-                        <div>
-                            <a asp-action="Index" asp-controller="Account" asp-route-returnUrl="@($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}{Context.Request.Path}{Context.Request.QueryString}")" class="text-dark text-decoration-none">
+                    <a asp-action="Index" asp-controller="Account" asp-route-returnUrl="@($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}{Context.Request.Path}{Context.Request.QueryString}")" class="text-dark text-decoration-none w-100 mb-3">
+                        <div class="p-2 d-flex justify-content-center w-100 border border-3 rounded border-dark user-button">
+                            <div>
                                 <img src="/utilities/person-circle.svg" alt="profile_icon" width="30" height="30" class="rounded-circle m-1">
                                 <span class="d-inline m-1">User</span>
-                            </a>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="col py-3 maindiv">
