--- a/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
@@ -28,7 +28,7 @@
                                     <small class="text-muted text-truncate me-2">(@item.ItemPath)</small>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
-                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                     <table class="table table-striped rounded">
                                         <tr>
                                             <td>
@@ -124,7 +124,7 @@
                                     <small class="text-muted text-truncate me-2">(@item.ItemPath)</small>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
-                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
                                         <td>
