--- a/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
@@ -23,7 +23,7 @@
                                     <a asp-action="Details" asp-route-path="@Model.CurrentPath" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
-                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                     <table class="table table-striped rounded">
                                         <tr>
                                             <td>
@@ -79,7 +79,7 @@
                                     <span class="itemlink">@item.Info.Name</span>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
-                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                     <table class="table table-striped rounded">
                                         <tr>
                                             <td>
