--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -26,7 +26,7 @@
                                 <a asp-action="Details" asp-route-folderName="@item.Info.Name" class="itemlink">@item.Info!.Name</a>
                             </summary>
                             <fieldset class="border border-dark p-2 m-2 rounded">
-                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
                                         <td class="ps-3 w-25 text-break">
