--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -22,14 +22,14 @@ details summary {
 }
 
 summary:before {
-    content: "➕";
+    content: url("../utilities/plus-icon.svg"); /*"➕"*/
     color: black;
     float: right;
     margin-right: 10px;
 }
 
 details[open] summary:before {
-    content: "➖";
+    content: url("../utilities/minus-icon.svg"); /*"➖"*/
 }
 
 #iconforitemtype {
@@ -446,6 +446,6 @@ progress {
 }
 /*Circular progressbar End*/
 
-.user-button:hover{
-    background-color: blue;
+.user-button:hover {
+    background-color: #0d6efd;
 }
