bugfix for js terminal

--- a/NCloud/NCloud/Views/Terminal/Index.cshtml
+++ b/NCloud/NCloud/Views/Terminal/Index.cshtml
@@ -52,7 +52,7 @@
 
                     this.pause();
 
-                    const ajaxData = await terminal.ExecuteClientSideCommand(command, '@Url.Action("CheckClientSideCommand","Terminal")', this);
+                    const ajaxData = await terminal.ExecuteClientSideCommand(command, '@Url.Action("CheckClientSideCommand","Terminal")', this, '@Url.Action("Index","DashBoard")');
 
                     if(ajaxData[1]){
                         
