bugfix for sharing details

--- a/NCloud/NCloud/Views/Drive/DeleteItems.cshtml
+++ b/NCloud/NCloud/Views/Drive/DeleteItems.cshtml
@@ -72,7 +72,7 @@
     </table>
 
     <div class="d-flex w-100 justify-content-center">
-        <button type="button" class="btn btn-outline-danger border border-danger border-3" id="modalLaunchBtn"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+        <button type="button" class="btn btn-danger border border-danger border-3" id="modalLaunchBtn"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></button>
     </div>
 
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
