--- a/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
@@ -98,7 +98,7 @@
                         {
                             <div>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
+                                    <img src="/utilities//person-bounding-box.svg" width="20" height="20" class="item align-bottom">
                                 </span>
                                 <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
                             </div>
