--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -20,9 +20,9 @@
         <div class="row flex-nowrap">
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 background-color border border-dark fixed navwidth">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-dark min-vh-100">
-                    <a asp-controller="Drive" asp-action="Index" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto">
+                    <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto">
                         <span class="fs-5 d-none d-sm-inline align-middle justify-content-center"><img src="/utilities/cloud_logo_no_text.png" alt="cloudlogo" class="me-3 logo"></span>
-                    </a>
+                    </div>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li class="nav-item my-2">
                             <a asp-controller="DashBoard" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
