--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -249,7 +249,7 @@
                                             <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center" /></button>
                                         </td>
                                         <td class="text-break">
-                                            <a href="@url" class="text-decoration-none" target="_blank">@url</a>
+                                            <a id="@(counter)_link" href="@(item.IsConnectedToWeb ? url : "")" class="text-decoration-none" target="_blank">@(item.IsConnectedToWeb ? url : "")</a>
                                         </td>
                                     </tr>
                                     <tr class="@(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr2">
@@ -261,7 +261,7 @@
 
                                             <button type="button" id="@(counter)_qrBtn" class="btn btn-primary" onclick="getQRCodeForItem('@Url.Action(qrData.Second,qrData.First)','@counter')">
                                                 <span id="@(counter)_qrCreateText">Create QR Code</span>
-                                                <img src="/utilities/qr-code.svg" width=" 20" height="20" class="ms-2 item rounded align-center" />
+                                                <img src="/utilities/qr-code.svg" width="20" height="20" class="ms-2 item rounded align-center" />
                                                 <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_qrSpinner">
                                                     <span class="visually-hidden">Loading...</span>
                                                 </div>
